@@ -2238,9 +2238,9 @@ void CPartFile::CompleteFileEnded(int completing_result, wxString* newname) {
 		ClearPriority();
 		// TODO: What the f*** if it is already known?
 		theApp.knownfiles->SafeAddKFile(this);
+		SetAutoUpPriority(thePrefs::GetNewAutoUp());
 		// remove the file from the suspended uploads list
 		theApp.uploadqueue->ResumeUpload(GetFileHash());
-		SetAutoUpPriority(false);
 		theApp.downloadqueue->RemoveFile(this);
 		theApp.sharedfiles->SafeAddKFile(this);
 		UpdateDisplayedInfo();
@@ -3857,6 +3857,9 @@ bool CPartFile::CheckShowItemInGivenCat(int inCategory)
 			break;
 		case 14:
 			IsNotFiltered = GetFiletype(GetFileName()) == ftText;
+			break;
+		case 15:
+			IsNotFiltered = !IsStopped() && GetStatus() != PS_PAUSED;
 			break;
 	}
 	
